[gd_scene load_steps=9 format=3 uid="uid://cwb3tm7yit8ui"]

[ext_resource type="Script" path="res://Systems/SimpleTextbox/TextboxHandler.gd" id="1_p2mex"]
[ext_resource type="Script" path="res://Systems/SimpleTextbox/TextboxSideSwitchergd.gd" id="2_1vw1c"]
[ext_resource type="FontFile" uid="uid://5femt7y4g7nr" path="res://Fonts/m5x7.ttf" id="2_kl7tj"]
[ext_resource type="Texture2D" uid="uid://v8fnjsfogej5" path="res://Images/UI/Textboxes/TextboxBackround.png" id="3_2acfc"]
[ext_resource type="Texture2D" uid="uid://cytddktubt4vh" path="res://Images/UI/Textboxes/CharacterBox.png" id="4_7wym6"]
[ext_resource type="Texture2D" uid="uid://duuq84e3lgtt5" path="res://Images/UI/Textboxes/TextboxBubble.png" id="5_uxldw"]
[ext_resource type="Texture2D" uid="uid://bpy3088gn0q24" path="res://Images/UI/Textboxes/GoldArmor.png" id="6_h32pv"]
[ext_resource type="Texture2D" uid="uid://p0rlx4nglm46" path="res://Images/UI/Textboxes/Player.png" id="7_xh8lg"]

[node name="TextboxHandler" type="Node2D"]
script = ExtResource("1_p2mex")
text_array = PackedStringArray("Johny boy is a gamer at heart Gemer jaknapifheufyodsfnogrehegfoqwubdofbf", "HE is very sexy and hot and epic weiofyvsxbpiaviyfgbrpfadigfvbesroigbpa", "I love him woeifbvspdiufhwoifbwepiyfgdspifbpiefbwuo rwigber", "God be with you oyge fuoyuewgfoyewgfo iwgfowygf ouydgow", "iywgfp idyg fpwihefpowfh doifgwe fg oiygewpuhwd", "wdpufhdwi fgwufhwpd gpfh ewfhdwfpwhf")
actions = {
0: "change_to_left;true,
change_left_actor;res://Images/UI/Textboxes/Player.png",
2: "change_to_left;false,
change_right_actor;res://Images/UI/Textboxes/Player.png",
3: "change_to_left;true,
change_left_actor;res://Images/UI/Textboxes/GoldArmor.png",
4: "change_to_left;false",
5: "change_to_left;true"
}

[node name="TextboxVisualMaster" type="Node2D" parent="."]
script = ExtResource("2_1vw1c")

[node name="TextboxLayer" type="CanvasLayer" parent="."]
layer = 3
visible = false

[node name="Control" type="Control" parent="TextboxLayer"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 118.0
offset_right = 316.0
offset_bottom = 176.0
mouse_filter = 1

[node name="TextboxBackround" type="TextureRect" parent="TextboxLayer/Control"]
layout_mode = 0
offset_right = 312.0
offset_bottom = 58.0
texture = ExtResource("3_2acfc")
stretch_mode = 2

[node name="ConversationSides" type="Control" parent="TextboxLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ConversationLeft" type="Control" parent="TextboxLayer/Control/ConversationSides"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ActorBoxLeft" type="TextureRect" parent="TextboxLayer/Control/ConversationSides/ConversationLeft"]
layout_mode = 0
offset_left = 11.0
offset_top = 14.0
offset_right = 41.0
offset_bottom = 44.0
texture = ExtResource("4_7wym6")
stretch_mode = 2

[node name="ActorPortraitLeft" type="TextureRect" parent="TextboxLayer/Control/ConversationSides/ConversationLeft"]
layout_mode = 0
offset_left = 14.0
offset_top = 17.0
offset_right = 38.0
offset_bottom = 41.0
texture = ExtResource("6_h32pv")
stretch_mode = 3

[node name="BubbleLeft" type="TextureRect" parent="TextboxLayer/Control/ConversationSides/ConversationLeft"]
layout_mode = 0
offset_left = 31.0
offset_top = 7.0
offset_right = 302.0
offset_bottom = 50.0
texture = ExtResource("5_uxldw")
stretch_mode = 3

[node name="ConversationRight" type="Control" parent="TextboxLayer/Control/ConversationSides"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ActorBoxRight" type="TextureRect" parent="TextboxLayer/Control/ConversationSides/ConversationRight"]
layout_mode = 0
offset_left = 271.0
offset_top = 14.0
offset_right = 301.0
offset_bottom = 44.0
texture = ExtResource("4_7wym6")
stretch_mode = 2

[node name="ActorPortraitRight" type="TextureRect" parent="TextboxLayer/Control/ConversationSides/ConversationRight"]
layout_mode = 0
offset_left = 274.0
offset_top = 17.0
offset_right = 298.0
offset_bottom = 41.0
texture = ExtResource("7_xh8lg")
stretch_mode = 3
flip_h = true

[node name="BubbleRight" type="TextureRect" parent="TextboxLayer/Control/ConversationSides/ConversationRight"]
layout_mode = 0
offset_left = 10.0
offset_top = 7.0
offset_right = 281.0
offset_bottom = 50.0
texture = ExtResource("5_uxldw")
stretch_mode = 3
flip_h = true

[node name="TextboxText" type="Label" parent="TextboxLayer/Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 9.0
offset_right = 261.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0.0919693, 0.072363, 0.180253, 1)
theme_override_constants/line_spacing = -1
theme_override_fonts/font = ExtResource("2_kl7tj")
text = "Hello gamers my name is john and this is my dog earnard, he likes to eat balls, not like in sexual way just like noraml tennis balls"
autowrap_mode = 2
visible_characters_behavior = 1

[node name="TextProgressTimer" type="Timer" parent="TextboxLayer"]
wait_time = 0.018

[connection signal="timeout" from="TextboxLayer/TextProgressTimer" to="." method="_on_text_progress_timer_timeout"]
